--- a/webgl/controls.css
+++ b/webgl/controls.css
@@ -1,6 +1,21 @@
+body {
+    font-family: 'Titillium Web', sans-serif;
+}
+
+p.toggle-view {
+    margin-left: 50px;
+}
+
+span {
+    color: red;
+}
+
+#top {
+    height: 240px;
+}
+
 label {
-    font-family: 'Tahoma', sans-serif;
-    font-size: 10px;
+    font-size: 14px;
 }
 .zoom-control {
     list-style-type: none;
@@ -95,9 +110,13 @@ li#Neptune {
 
 #zoom-and-scale-controls {
     float: left;
+    height: 100%;
 }
 
-#zoom-and-scale-controls label {
+#zoom-label {
+    position: relative;
+    top: 15px;
+    left: 50px;
 }
 
 #space {
@@ -134,7 +153,7 @@ li#Neptune {
     float: left;
 }
 
-#toggle-view {
-    margin-left: 50px;
-    margin-top: 20px;
+.toggle-view {
+    display: inline;
+    font-family: 'Titillium Web', sans-serif;
 }
