--- a/webgl/exo-d3.css
+++ b/webgl/exo-d3.css
@@ -6,7 +6,8 @@ stroke-width:1px;
 stroke:#888;
 }
 
-#exoD3svg .axislabel {
+#exoD3svg .axislabel, 
+#exoD3svg .legendlabel {
 font:10px verdana,sans-serif;
 }
 
@@ -25,6 +26,9 @@ fill:#0d0;
 #exoD3svg .planet.gasgiant{
 opacity:0.2;
 fill:#2de;
+}
+#exoD3svg .legend.planet{
+cursor:pointer;
 }
 
 /* scatterplot selection (aka brush) */
